<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/orig"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_main_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/b_back"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/transparent"
            android:drawableStart="@drawable/arrow_back"
            android:fontFamily="@font/roboto_light"
            android:paddingStart="0dp"
            android:text="@string/back"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toTopOf="parent" />


        <!--        <RatingBar-->
        <!--            android:id="@+id/ratingBar"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:rating="3"-->
        <!--            android:numStars="5"-->
        <!--            android:stepSize="0.1"-->
        <!--            style="@style/CustomRatingBarStyle"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/tv_category" />-->


        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_round_corner"
            android:fontFamily="@font/roboto_black"
            android:paddingStart="2dp"
            android:paddingTop="3dp"
            android:paddingEnd="2dp"
            android:paddingBottom="3dp"
            android:text="@string/age"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_poster"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/white"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@id/iv_poster"
            app:layout_constraintEnd_toStartOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/tv_age"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/category"
            android:textColor="@color/pink"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/smallRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:rating="4"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />


        <TextView
            android:id="@+id/tv_countOfReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/count"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toEndOf="@id/ratingBar"
            app:layout_constraintTop_toTopOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/reviews"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_countOfReview"
            app:layout_constraintStart_toEndOf="@id/tv_countOfReview"
            app:layout_constraintTop_toBottomOf="@id/tv_genre" />


        <TextView
            android:id="@+id/tv_storyline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/content_start"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_light"
            android:lineSpacingExtra="3dp"
            android:text="@string/discribe"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/content_end"
            app:layout_constraintStart_toEndOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/tv_storyline" />

        <TextView
            android:id="@+id/tv_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/content_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/under_banner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="300dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actor_list"
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_cast"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>