<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/banner_mini_back"
    android:paddingStart="2dp"
    android:paddingTop="2dp"
    android:paddingEnd="2dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:src="@drawable/avengers_end_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/mask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_main_gradient"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_poster"
        app:layout_constraintEnd_toEndOf="@id/iv_poster"
        app:layout_constraintStart_toStartOf="@id/iv_poster"
        app:layout_constraintTop_toTopOf="@id/iv_poster" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/back_age_mini"
        android:fontFamily="@font/roboto_black"
        android:paddingStart="1dp"
        android:paddingTop="3dp"
        android:paddingEnd="1dp"
        android:paddingBottom="3dp"
        tools:text="@string/age"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/nameMini"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/iv_poster" />

    <TextView
        android:id="@+id/tv_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_black"
        tools:text="@string/time"
        android:textColor="@color/gray"
        android:textSize="10sp"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/category"
        android:textColor="@color/pink"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_poster"
        app:layout_constraintStart_toStartOf="@id/content_start" />


    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/smallRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:rating="4"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/tv_genre" />

    <TextView
        android:id="@+id/tv_countOfReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/count"
        android:textColor="@color/gray"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/mask"
        app:layout_constraintStart_toEndOf="@id/ratingBar"
        app:layout_constraintTop_toTopOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/tv_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/reviews"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="8sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_countOfReview"
        app:layout_constraintStart_toEndOf="@id/tv_countOfReview" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_age"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintTop_toTopOf="@+id/tv_age"
        app:srcCompat="@drawable/like" />

</androidx.constraintlayout.widget.ConstraintLayout>