<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    android:paddingStart="2dp"
    android:paddingEnd="2dp"
    android:paddingTop="2dp"
    android:background="@drawable/banner_mini_back">

    <ImageView

        android:id="@+id/iv_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/banner_mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/mask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_main_gradient"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_banner"
        app:layout_constraintEnd_toEndOf="@id/iv_banner"
        app:layout_constraintStart_toStartOf="@id/iv_banner"
        app:layout_constraintTop_toTopOf="@id/iv_banner" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/back_age_mini"
        android:fontFamily="@font/roboto_black"
        android:paddingStart="1dp"
        android:paddingTop="3dp"
        android:paddingEnd="1dp"
        android:paddingBottom="3dp"
        android:text="@string/age"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_movieName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/nameMini"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/iv_banner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:textColor="@color/gray"
        android:textSize="10sp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/time"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_movieName"
        app:layout_constraintStart_toStartOf="@id/content_start" />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/category"
        android:textColor="@color/pink"
        android:textSize="10sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintBottom_toBottomOf="@id/iv_banner"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:paddingStart="0dp"
        app:constraint_referenced_ids="star_one,star_two,star_three,star_four,star_five"
        app:flow_horizontalGap="2dp"
        app:flow_verticalAlign="center"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintStart_toStartOf="@id/content_start" />

    <ImageView
        android:id="@+id/star_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fill_star_mini"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="236dp" />

    <ImageView
        android:id="@+id/star_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fill_star_mini"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="236dp" />

    <ImageView
        android:id="@+id/star_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fill_star_mini"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="236dp" />

    <ImageView
        android:id="@+id/star_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/fill_star_mini"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="42dp" />

    <ImageView
        android:id="@+id/star_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/empty_star_mini"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="236dp" />

    <TextView
        android:id="@+id/tv_countOfReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/count"
        android:textColor="@color/gray"
        android:textSize="8sp"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/star_five"
        app:layout_constraintStart_toEndOf="@id/rating"
        app:layout_constraintTop_toTopOf="@+id/star_five" />

    <TextView
        android:id="@+id/tv_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/reviews"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="8sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_countOfReview"
        app:layout_constraintStart_toEndOf="@id/tv_countOfReview" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_age"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintTop_toTopOf="@+id/tv_age"
        app:srcCompat="@drawable/like" />

</androidx.constraintlayout.widget.ConstraintLayout>